name:                structured-concurrent
version:             0.1.1.0
synopsis:            Exception handlings and modularities to concurrent programming
-- description:         
license:             MIT
license-file:        LICENSE
author:              Kousuke Ruichi
maintainer:          kou.ruichi@gmail.com
category:            Concurrency
build-type:          Simple
extra-source-files:  README.md, examples/
cabal-version:       >=1.18


library
  exposed-modules:     Control.Monad.Concurrent.Structured
                     , Control.Concurrent.Structured
                     , Control.Concurrent.Structured.Base
                     , Control.Concurrent.Structured.MVar
                     , Control.Concurrent.Structured.Chan
                     , Control.Concurrent.Structured.QSem
                     , Control.Concurrent.Structured.STM
                     , Control.Concurrent.Structured.Async
                     , Control.Concurrent.Structured.Exception
  
  default-extensions:  ScopedTypeVariables
                     , RankNTypes
  build-depends:       base >=4.7 && <5.0
                     , async
                     , stm
                     , transformers
                     , mtl
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -O2
  default-language:    Haskell2010

test-suite tasty
  type:                exitcode-stdio-1.0
  main-is:             Tasty.hs
  default-extensions:  ScopedTypeVariables
                     , RankNTypes
  hs-source-dirs:      tests
                     , src
  build-depends:       base             >=4.7  && <5.0
                     , tasty            >=0.10 && <0.11
                     , tasty-quickcheck >=0.8  && <0.9

                     , async
                     , stm
                     , transformers
                     , mtl
  ghc-options:         -Wall
  default-language:    Haskell2010

executable examples
  main-is:             Example.hs
  default-extensions:  ScopedTypeVariables
                     , RankNTypes
  build-depends:       base >=4.7 && <5.0
                     , async
                     , stm
                     , transformers
                     , mtl
  hs-source-dirs:      examples, src
  ghc-options:         -Wall
                       -O2
  default-language:    Haskell2010

-- vim: expandtab tabstop=2 softtabstop=2 shiftwidth=2 :
